temporarily adding ai maker bundle

--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
-        "symfony/yaml": "6.2.*"
-    },
-    "require-dev": {
+        "symfony/yaml": "6.2.*",
+        "symfonycasts/ai-maker-bundle": "@dev"
     },
     "config": {
         "platform": {
@@ -65,5 +64,11 @@
             "allow-contrib": false,
             "require": "6.2.*"
         }
-    }
+    },
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/Users/weaverryan/Sites/os/ai-maker-bundle"
+        }
+    ]
 }
