Revert "Installing Twig"
This reverts commit 048f92214a668907dadf816116dd2df20f9f2475.

--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
-        "symfony/twig-bundle": "6.2.*",
         "symfony/yaml": "6.2.*",
-        "symfonycasts/ai-maker-bundle": "@dev",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "symfonycasts/ai-maker-bundle": "@dev"
     },
     "config": {
         "platform": {
