--- a/composer.json
+++ b/composer.json
@@ -87,5 +87,8 @@
             "type": "path",
             "url": "/Users/weaverryan/Sites/os/ai-maker-bundle"
         }
-    ]
+    ],
+    "require-dev": {
+        "symfony/maker-bundle": "^1.48"
+    }
 }
