--- a/composer.json
+++ b/composer.json
@@ -89,6 +89,10 @@
         }
     ],
     "require-dev": {
-        "symfony/maker-bundle": "^1.48"
+        "symfony/debug-bundle": "6.2.*",
+        "symfony/maker-bundle": "^1.48",
+        "symfony/monolog-bundle": "^3.0",
+        "symfony/stopwatch": "6.2.*",
+        "symfony/web-profiler-bundle": "6.2.*"
     }
 }
