tuts hero working...

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,3 +3,4 @@ api_platform:
         jsonld: [ 'application/ld+json' ]
         json: [ 'application/json' ]
         html: [ 'text/html' ]
+        jsonhal: [ 'application/hal+json' ]
