removing temporary bundle

--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.2.*",
         "symfony/runtime": "6.2.*",
-        "symfony/yaml": "6.2.*",
-        "symfonycasts/ai-maker-bundle": "@dev"
+        "symfony/yaml": "6.2.*"
     },
     "config": {
         "platform": {
@@ -64,11 +63,5 @@
             "allow-contrib": false,
             "require": "6.2.*"
         }
-    },
-    "repositories": [
-        {
-            "type": "path",
-            "url": "/Users/weaverryan/Sites/os/ai-maker-bundle"
-        }
-    ]
+    }
 }
