tuts hero working...

--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "@api-platform/admin": "^3.4.3"
     }
 }
