--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/security-bundle": "6.2.*",
         "symfony/serializer": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
+        "symfony/ux-react": "^2.6",
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*"
