Adding remainder of raw chapters

--- a/sfcasts/ep1/metadata.yml
+++ b/sfcasts/ep1/metadata.yml
@@ -1,11 +1,29 @@
 chapters:
-  - install
-  - api-resource
-  - swagger
-  - open-api-spec
-  - json-ld
-  - hydra
-  - profiler
-  - operations
-  - serializer
-  - serialization-groups
+    - install
+    - api-resource
+    - swagger
+    - open-api-spec
+    - json-ld
+    - hydra
+    - profiler
+    - operations
+    - serializer
+    - serialization-groups
+    - serialization-tricks
+    - pagination
+    - filters
+    - property-filter
+    - formats
+    - validation
+    - user-entity
+    - user-resource
+    - relations
+    - relations-iri
+    - embedded
+    - embedded-write
+    - collections-write
+    - collections-create
+    - collections-remove-item
+    - relation-filtering
+    - subresources
+    - react-admin
