--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/serializer": "6.2.*",
         "symfony/twig-bundle": "6.2.*",
         "symfony/ux-react": "^2.6",
+        "symfony/ux-vue": "^2.7",
         "symfony/validator": "6.2.*",
         "symfony/webpack-encore-bundle": "^1.16",
         "symfony/yaml": "6.2.*"
