--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@hotwired/stimulus": "^3.0.0",
         "@symfony/stimulus-bridge": "^3.2.0",
         "@symfony/ux-react": "file:vendor/symfony/ux-react/assets",
+        "@symfony/ux-vue": "file:vendor/symfony/ux-vue/assets",
         "@symfony/webpack-encore": "^4.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "autoprefixer": "^10.4.13",
@@ -18,6 +19,7 @@
         "react-dom": "^18.0",
         "regenerator-runtime": "^0.13.9",
         "tailwindcss": "^3.2.6",
+        "vue": "^3.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-notifier": "^1.15.0"
