[tuts-apply-diff] Applying existing diff file for step docs-enable-docs-false

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -4,3 +4,5 @@ api_platform:
         json: [ 'application/json' ]
         html: [ 'text/html' ]
         jsonhal: [ 'application/hal+json' ]
+
+    enable_docs: false
