[tuts-apply-diff] Applying existing diff file for step docs-reenable-everything

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -2,9 +2,10 @@ api_platform:
     formats:
         jsonld: [ 'application/ld+json' ]
         json: [ 'application/json' ]
+        html: [ 'text/html' ]
         jsonhal: [ 'application/hal+json' ]
 
-    enable_docs: false
-    enable_entrypoint: false
-    enable_swagger: false
-    enable_swagger_ui: false
+#    enable_docs: false
+#    enable_entrypoint: false
+#    enable_swagger: false
+#    enable_swagger_ui: false
