--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,8 @@ security:
             provider: app_user_provider
             json_login:
                 check_path: app_login
+                username_path: email
+                password_path: password
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
