[tuts-apply-diff] Applying existing diff file for step bearer-remove-old-one-in-config

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -7,6 +7,7 @@ api_platform:
 
     swagger:
         api_keys:
+            # overridden in OpenApiFactoryDecorator
             access_token:
                 name: Authorization
                 type: header
