[tuts-apply-diff] Applying existing diff file for step testing-install-browser

--- a/composer.json
+++ b/composer.json
@@ -96,6 +96,7 @@
         "symfony/phpunit-bridge": "^6.2",
         "symfony/stopwatch": "6.2.*",
         "symfony/web-profiler-bundle": "6.2.*",
+        "zenstruck/browser": "^1.2",
         "zenstruck/foundry": "^1.26"
     }
 }
