Proofing and splitting

--- a/sfcasts/ep2-security/metadata.yml
+++ b/sfcasts/ep2-security/metadata.yml
@@ -5,6 +5,7 @@ chapters:
     - auth-errors
     - login-response
     - data-page-load
+    - stimulus-values
     - api-token-entity
     - access-token-authenticator
     - open-api-decoration
