--- a/sfcasts/ep2-security/metadata.yml
+++ b/sfcasts/ep2-security/metadata.yml
@@ -7,6 +7,7 @@ chapters:
     - data-page-load
     - stimulus-values
     - api-token-entity
+    - token-string-fixtures
     - access-token-authenticator
     - open-api-decoration
     - scopes
