--- a/sfcasts/ep2-security/metadata.yml
+++ b/sfcasts/ep2-security/metadata.yml
@@ -14,6 +14,7 @@ chapters:
     - security
     - test-setup
     - browser
+    - more-json-testing
     - test-user-login
     - api-token-test
     - new-put-behavior
