proofing and splitting

--- a/sfcasts/ep2-security/metadata.yml
+++ b/sfcasts/ep2-security/metadata.yml
@@ -16,6 +16,7 @@ chapters:
     - browser
     - more-json-testing
     - test-user-login
+    - browser-default-options
     - api-token-test
     - new-put-behavior
     - acl-owner
