proofing and splitting

--- a/sfcasts/ep2-security/metadata.yml
+++ b/sfcasts/ep2-security/metadata.yml
@@ -24,6 +24,7 @@ chapters:
     - access-control-voter
     - api-property
     - plain-password
+    - state-processor
     - validation-groups
     - context-builder
     - custom-normalizer
