--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.0",
+        "api-platform/core": "dev-main",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.8",
         "doctrine/doctrine-migrations-bundle": "^3.2",
@@ -28,6 +28,7 @@
         "symfony/security-bundle": "6.3.*",
         "symfony/serializer": "6.3.*",
         "symfony/stimulus-bundle": "^2.9",
+        "symfony/string": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/ux-react": "^2.6",
         "symfony/ux-vue": "^2.7",
