fixing and silencing deprecations

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,5 @@
 api_platform:
+    keep_legacy_inflector: false
     formats:
         jsonld: [ 'application/ld+json' ]
         json: [ 'application/json' ]
