--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,6 +15,8 @@
         <server name="SHELL_VERBOSITY" value="-1" />
         <server name="SYMFONY_PHPUNIT_REMOVE" value="" />
         <server name="SYMFONY_PHPUNIT_VERSION" value="9.5" />
+        <!-- silencing deprecations warnings - avoid in a real project -->
+        <server name="SYMFONY_DEPRECATIONS_HELPER" value="logFile=php://temp" />
     </php>
 
     <testsuites>
