[tuts-apply-diff] Applying existing diff file for step dtoprovider-comment-out-null-value-config

--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,7 +1,7 @@
 api_platform:
-    defaults:
-        normalization_context:
-          skip_null_values: false
+#    defaults:
+#        normalization_context:
+#          skip_null_values: false
     formats:
         jsonld: [ 'application/ld+json' ]
         json: [ 'application/json' ]
