Adding remaining raw scripts

--- a/sfcasts/metadata.yml
+++ b/sfcasts/metadata.yml
@@ -15,3 +15,18 @@ chapters:
     - state-options
     - entity-dto-provider
     - provider-return-dto
+    - entity-item-provider
+    - entity-state-processor
+    - processor-saving
+    - control-fields
+    - validation-security
+    - micro-mapper
+    - generic
+    - dragon-treasure-dto
+    - relations-depth
+    - dragon-treasure-write
+    - treasure-security
+    - publish
+    - write-relation
+    - collection-relation-write
+    - simpler-validator
