--- a/sfcasts/metadata.yml
+++ b/sfcasts/metadata.yml
@@ -7,6 +7,7 @@ chapters:
     - on-publish
     - custom-resource
     - custom-resource-provider
+    - date-identifier
     - custom-resource-item-provider
     - custom-resource-processor
     - custom-resource-relations
